<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/profile_appbar_settings_btn"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <!--   &lt;!&ndash; Settings, should always be in the overflow &ndash;&gt;
       <item
           android:id="@+id/action_settings"
           android:title="@string/action_settings"
           app:showAsAction="never" />-->

</menu>