<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_play_circle_filled_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_baseline_leaderboard_24"
            android:title="@string/menu_leaderboard" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_profile" />
    </group>
</menu>