...
                android:layout_height="140dp"
                android:contentDescription="@string/profile_picture_desc"
                app:srcCompat="@mipmap/ic_launcher"
                tools:src="@tools:sample/avatars[11]" />

            <Button
                android:id="@+id/editProfilePic"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/edit"
                app:layout_constraintEnd_toEndOf="parent"
...
