<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_match_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.MatchDetailsFragment">

    <TableLayout
        android:id="@+id/matchDetailTable"
...
