<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <ListPreference
        app:defaultValue="system"
        app:entries="@array/theme_entries"
        app:entryValues="@array/theme_values"
        app:icon="@drawable/ic_baseline_palette_24"
        app:key="@string/theme_pref_key"
        app:title="@string/theme_mode"
        app:useSimpleSummaryProvider="true" />

    <!-- <Preference app:fragment="ch.epfl.sweng.rps.ui.settings.SettingsActivity$AppearanceFragment" app:icon="@drawable/ic_baseline_palette_24" app:key="appearance_header" app:title="@string/appearance_header" />

     <Preference app:fragment="ch.epfl.sweng.rps.ui.settings.SettingsActivity$SyncFragment" app:icon="@drawable/sync" app:key="sync_header" app:title="@string/sync_header" />-->


    <Preference
        app:icon="@drawable/ic_baseline_text_snippet_24"
        app:key="@string/show_license_key"
        app:summary="Show the license of the app"
        app:title="@string/license_title" />

    <Preference
        app:icon="@drawable/ic_baseline_person_24"
        app:key="@string/settings_show_uid_text"
        app:title="@string/copy_fb_uid" />

    <Preference
        app:icon="@drawable/ic_baseline_play_circle_filled_24"
        app:key="@string/join_queue_now_key"
        app:title="Join queue" />

    <Preference
        app:icon="@drawable/sync"
        app:key="@string/add_artificial_game_settings"
        app:title="@string/add_artificial_game" />

    <Preference
        app:icon="@drawable/ic_baseline_dashboard_24"
        app:key="@string/settings_show_onboard"
        app:title="@string/show_welcome_screen_text_settings" />

    <Preference
        app:icon="@drawable/ic_baseline_info_24"
        app:key="@string/dump_sys_settings_key"
        app:title="@string/dump_dbg_infos_pref_text" />

    <Preference
        app:icon="@drawable/ic_baseline_delete_24"
        app:key="@string/settings_clear_shared_prefs"
        app:title="@string/clear_shared_prefs_settings_text" />

</PreferenceScreen>