<?xml version="1.0" encoding="utf-8"?><!-- Here frame layout is used so that different
     fragments of our onboarding screen can be
     changed within the same layout-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardingActivity" />